--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/ui.css"/>
+<link rel="stylesheet" href="JQuery/ui.css"/>
 <link rel="stylesheet" href="css/color.css"/>
-<script src="js/jquery.js"></script>
-<script src="js/ui.js"></script>
+<script src="JQuery/jquery.js"></script>
+<script src="JQuery/ui.js"></script>
 <script src="js/color.js"></script>
 </head>
 <body>
