--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <link rel="stylesheet" href="JQuery/ui.css"/>
-<link rel="stylesheet" href="css/color.css"/>
+<link rel="stylesheet" href="css/index.css"/>
 <script src="JQuery/jquery.js"></script>
 <script src="JQuery/ui.js"></script>
-<script src="js/color.js"></script>
+<script src="js/index.js"></script>
 </head>
 <body>
 	<div id="rslider"></div>
